Bug 146137 - Not able to move inserted images in Draw (image keeps in its original position)
Summary: Not able to move inserted images in Draw (image keeps in its original position)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-12-09 03:30 UTC by Kevin Suo
Modified: 2021-12-10 07:44 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2021-12-09 03:30:52 UTC
Steps to Reproduce:
1. New Draw
2. Insert > Image, select any png image to insert.
3. Move the image position by dragging and dropping.

Current Result:
Image keeps in its original position. However, it will go to the new position if you go to another page and then return to the previous page.

Expected:
Image position should change instantly at step 3.

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: bf38dd800e6e4e820a0cef84e082d9bcee8e8133
CPU threads: 8; OS: Linux 5.14; UI render: default; VCL: gtk3
Locale: zh-CN (zh_CN.UTF-8); UI: zh-CN
Build Platform: Fedora34@X64, Branch:master, bibisect-linux-64-7.4-CN
Calc: threaded
Comment 1 Kevin Suo 2021-12-09 03:33:26 UTC
Bibisected and bisected to:

commit fe6a140a537eda1b6703c44ff5ee49d2ba875b81
Author: Noel Grandin <noel.grandin@collabora.co.uk>
Date:   Tue Dec 7 14:55:13 2021 +0200

    used cache value in ViewObjectContact::getPrimitive2DSequence

Adding cc: Noel Grandin, could you please take a look? Thanks.

It should be the same issue as reported in bug 146132.
Comment 2 Commit Notification 2021-12-09 17:00:57 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/681e10eecf67a1a01bdec2cc9b834e0345e25206

tdf#146137 tdf#146132 image redrawing

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.