tdf#146137 tdf#146132 image redrawing

regression from
    commit fe6a140a537eda1b6703c44ff5ee49d2ba875b81
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Tue Dec 7 14:55:13 2021 +0200
    used cache value in ViewObjectContact::getPrimitive2DSequence

we need to blow away the cached data when the object changes

Change-Id: I3be8d57b166b6f7e3a04bd8fc34c83eed5ff8857